Fix responsiveness on elements and components to display correctly for mobile, tablet and desktop. Update buttons to be rounded and to show full width if on mobile.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -47,11 +47,11 @@
 }
 
 .outputBox {
-  min-height: 450px;
+  min-height: 550px;
   background-color: rgb(26, 28, 37);
   overflow-y: visible;
   overflow-x: hidden;
-  max-height: 450px;
+  max-height: 550px;
   padding: 1em;
 }
 
@@ -98,11 +98,29 @@
 }
 
 .stdoutPanel {
-  width: 50%;
+  width: 100%;
+}
+
+.customStdoutPanel {
+  width: 40%;
 }
 
 @media (max-width: 900px) {
   .stdoutPanel {
     width: 100%;
+  }
+  .descriptionP {
+    margin: 1rem 0;
+    line-height: 1.5;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
+  }
+  .description {
+    margin: 1rem 0;
+    line-height: 1.5;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
   }
 }
